--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
     <h1>Hi!</h1>
-    <canvas id="canvas"></canvas>
+    <button id="start">Start Motion</button>
+    <button id="stop">Stop Motion</button>
+    <canvas id="canvas" width="800" height="600"></canvas>
     <script src="js/main.js"></script>
 </body>
 </html>
