--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Hi!</h1>
     <button id="start">Start Motion</button>
     <button id="stop">Stop Motion</button>
-    <canvas id="canvas" width="800" height="600"></canvas>
+    <canvas id="canvas"></canvas>
     <script src="js/main.js"></script>
 </body>
 </html>
