3d objects working but not scaling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Streamer Background</title>
 </head>
-<body>
 
-    <h1>Hi!</h1>
-    <button id="start">Start Motion</button>
-    <button id="stop">Stop Motion</button>
-    <canvas id="canvas"></canvas>
+<body>
+    <section>
+        <button id="start">Start Motion</button>
+        <button id="stop">Stop Motion</button>
+    </section>
+    <canvas id="canvas" width="800" height="600"></canvas>
     <script src="js/main.js"></script>
 </body>
+
 </html>
