--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 <body>
     <section>
-        <button id="start">Start Motion</button>
-        <button id="stop">Stop Motion</button>
+        <button id="start-stop">Toggle Motion</button>
     </section>
     <canvas id="canvas" width="800" height="600"></canvas>
     <script src="js/main.js"></script>
