adding imageProp checkpoint

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <button id="start-stop">Toggle Motion</button>
     </section>
     <canvas id="canvas" width="800" height="600"></canvas>
+    <div id="canvasImages" style="display: none">
+        <img src="images/800px-Cat_March_2010-1.jpg" alt="">
+        <img src="images/Cat_November_2010-1a.jpg" alt="">
+    </div>
     <script src="js/main.js"></script>
 </body>
 
