--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="images/800px-Cat_March_2010-1.jpg" alt="">
         <img src="images/Cat_November_2010-1a.jpg" alt="">
     </div>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
