added 3rd image

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="canvasImages" style="display: none">
         <img src="images/800px-Cat_March_2010-1.jpg" alt="">
         <img src="images/Cat_November_2010-1a.jpg" alt="">
+        <img src="images/600px-Astronaut,_cosmonaut_space_suit_model_in_Kennedy_Space_Center_Visitor_Complex.jpg" alt="">
     </div>
     <script type="module" src="js/main.js"></script>
 </body>
